# aibolit

./: .0pdd.yml  .dcignore  .flake8  .gitattributes  .gitignore  .pdd  .pylintrc  .rultor.yml  .testmondata  .travis.yml  .xcop  DEPENDS.txt  Dockerfile  LICENSE.txt  MANIFEST.in  Makefile  PATTERNS.md  README.md  README.rst  REUSE.toml  SCOPE.md  TYPECHEKING.md  aibolit-vitals.html  aibolit.html  aibolit.json  aibolit.xml  aibolit.yaml  appveyor.yml  build.sh  e2e-release.yml  pom.xml  pyproject.toml  ranking_methods_comparison.ipynb  requirements.txt  run.py  run_var_middle.py  setup.cfg  setup.py  test_e2e_release.sh
.github/: pull_request_template.md
.github/workflows/: actionlint.yml  bandit.yml  bashate.yml  bibcop.yml  checkmake.yml  codecov.yml  copyrights.yml  docker-hub.yml  e2e-release.yml  flake8.yml  latexmk.yml  lint.yml  make.yml  markdown-lint.yml  pdd.yml  pylint.yml  pyright.yml  reuse.yml  ruff.yml  shellcheck.yml  style.yml  titles.yml  ty.yml  typecheck.yml  typos.yml  up.yml  xcop.yml  yamllint.yml  zerocracy.yml
aibolit/: __init__.py  __main__.py  config.py  cyclical.xml  java_file_checker.py  main.py  report.xsd  test_for_statements.py  types.py  types_decl.py
aibolit/ast/: __init__.py  ast.py  java_class.py  java_class_decomposition.py  java_class_field.py  java_class_method.py  java_package.py
aibolit/ast_framework/: __init__.py  _auxiliary_data.py  ast.py  ast_node.py  ast_node_type.py  computed_fields_registry.py  java_class.py  java_class_decomposition.py  java_class_field.py  java_class_method.py  java_package.py  scope.py  scope_extractors.py
aibolit/ast_framework/block_statement_graph/: __init__.py  _block_extractors.py  _nodes_factory.py  block.py  builder.py  constants.py  statement.py
aibolit/ast_framework/computed_fields_catalog/: __init__.py  chained_fields.py  node_filter.py  nodes_filter.py  standard_fields.py
aibolit/binary_files/: features_order.json  model.pkl
aibolit/cfg/: cfg.json
aibolit/clustering/: clustering.py
aibolit/dataset_collection/: dataset_collection.py
aibolit/extract_method_baseline/: clustering.py  clustering_test.py  extract_semantic.py
aibolit/metrics/: __init__.py  loc.py
aibolit/metrics/NumberMethods/: NumberMethods.py
aibolit/metrics/RFC/: rfc.py
aibolit/ml_pipeline/: ml_pipeline.py  ml_pipline.py
aibolit/model/: Stats.py  Two_fold_importance_model.ipynb  model.py  model.py.puml  stats.py  train_pipeline.puml  usage.py
aibolit/patterns/: __init__.py  pattern.py
aibolit/scripts/: 01-fetch-github.py  02-calculate-metrics.py  03-find-patterns.py  found_java_files.txt  readability.classifier  readability.py  trending.py
aibolit/utils/: ast.py  ast_builder.py  cfg_builder.py  cohesiongraph.py  encoding_detector.py  filter.py  graph.py  java_class.py  java_class_decomposition.py  java_class_field.py  java_class_method.py  java_package.py  java_parser.py  lines.py  scope_status.py  utils.py
docker/: Dockerfile  Dockerfile.download  Dockerfile.recommend  git_clone_and_pull_pr.sh
metrics/: README.md  main.py
metrics/cc/: README.md  main.py
metrics/tests/: check_error.py
model/: Pairwise.ipynb  dataset_500000_without_metrics.7z  dataset_pairwise.7z
notebooks/: ranking_methods_comparison.ipynb
scripts/: 01-fetch-github.py  02-calculate-metrics.py  02-filter-and-move.py  03-calculate-metrics.py  03-find-patterns.py  04-find-patterns.py  05-calculate-rs.py  05-find-patterns.py  06-calculate-halstead.py  07-merge.py  08-split.py  Makefile  README.md  merge.py  pmd_metrics.py  requirements.txt  ruleset.xml
scripts/crap_scripts/: MakeFile  console_run_patterns.py
stubs/bs4/: __init__.pyi  dammit.pyi  diagnose.pyi  element.pyi  formatter.pyi
stubs/javalang/: __init__.pyi  ast.pyi  javadoc.pyi  parse.pyi  parser.pyi  tokenizer.pyi  tree.pyi  util.pyi
survey/: package-lock.json  package.json
survey/src/: App.css  App.js  PrettyCode.js  Survey.js  firebaseConfig.js
test/: __init__.py  check_error.py  test.py  test_cli_help.py  test_makefile.py
test/ast_framework/: BlockStatementGraphExamples.java  LottieImageAsset.java  MemberReferencesExample.java  MethodInvokeExample.java  MethodUseOtherMethodExample.java  ScopeTest.java  SimpleClass.java  StaticConstructor.java  test_ast.py  test_ast_node.py  test_block_statement_graph.py  test_java_class_decomposition.py  test_scope.py
test/clustering/: Article_example.java  test_clustering.py
test/config/: test_config.py
test/e2e/: test_e2e_release.sh
test/extract_method_baseline/: ExampleFromPaper.java  SimpleMethods.java  test_example_from_paper.py  test_extract_semantic.py
test/integration/: all.py  test_model.py  test_patterns_and_metrics.py  test_recommend.sh  test_semantic_extraction.py
test/interface/: test_graceful_shutdown.py
test/metrics/: test_loc.py
test/metrics/RFC/: 1.java  (+16 more)
test/model/: model.pkl  test_model.py
test/recommend/: test_recommend_pipeline.py
test/scripts/: test_calculate_metrics.py  test_fetch_github.py
test/stats/: model.pkl  results_test.csv  test_dataset.csv  test_stats.py  train_mock.csv
test/units/: __init__.py  empty_total_score.py  test_empty_total_score.py
test/utils/: ConditionalExpressionCheck.java  ExceptionDemo.java  MethodInvokeExample.java  MethodUseOtherMethodExample.java  SimpleClass.java  SimpleClassInPackage.java  StaticConstructor.java  TwoClasses.java  test_ast.py  test_ast_node.py  test_cfg_builder.py  test_encoding_detector.py  test_java_class.py  test_java_class_decomposition.py  test_java_class_field.py  test_java_class_method.py  test_java_package.py  test_remove_comments.py
test/xml/: __init__.py  test_xml.py
uml/: classes_diagram.puml  recommendation_pipeline.puml  train_pipeline.puml
wp/: .gitignore  Makefile  references.bib  wp.tex
wp/sections/: appendix.tex  available_data.tex  conclusion.tex  considered.tex  empirical_results.tex  how_aibolit_works.tex  introduction.tex  motivation.tex  notes.tex  pattern_emp_analysis.tex  related_work.tex  risks.tex  saved.tex  selected_task.tex  selection_criteria.tex  threats_to_validity.tex  usage_scenarios.tex
(+957 files in other folders)
