# SPDX-FileCopyrightText: Copyright (c) 2019-2025 Aibolit
# SPDX-License-Identifier: MIT

[project]
name = "aibolit"
description = "DevTool recommending how to improve the maintenance quality of your Java classes"
authors = [
  { name = "aibolit", email = "yegor256@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
  "beautifulsoup4==4.13.4",
  "build==1.2.2.post1",
  "catboost==1.2.8",
  "chardet==5.2.0",         # Replace cchardet with chardet for Python 3.12 compatibility
  "deprecated==1.2.10",
  "html5lib==1.1",
  "javalang==0.13.0",
  "lxml==5.4.0",
  "matplotlib==3.10.3",
  "networkx==3.2",          # Updated to be compatible with NumPy 2.0+
  "numpy==2.2.5",
  "packaging==25.0",        # For version parsing, updated for sphinx compatibility
  "pandas==2.2.3",
  "pebble==4.5.3",
  "requests==2.32.4",
  "scikit-learn==1.6.1",
  "scipy==1.15.3",
  "setuptools==80.7.1",
  "tqdm==4.66.3",
]

classifiers = [
  "Programming Language :: Python",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development",
  "Topic :: Utilities"
]

[project.scripts]
aibolit = "aibolit.__main__:main"

[tool.setuptools]
packages = ["aibolit"]
include-package-data = true

[tool.setuptools.package-data]
aibolit = [
  "binary_files/halstead.jar",
  "binary_files/model.dat"
]

[tool.setuptools.dynamic]
version = { attr = "aibolit.__version__" }

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
mypy_path = "stubs"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = [
  "D207",
  "D208",
  "Q",
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "single"

[dependency-groups]
dev = [
  "codecov==2.1.13",
  "flake8-elegant-objects==1.1.1",
  "flake8==7.2.0",
  "mypy==1.16.1", # Update to a version compatible with Python 3.12
  "pylint==3.3.7",
  "pyright>=1.1.405",
  "pytest-cov==6.1.1",
  "pytest-testmon==2.1.3",
  "pytest==8.3.5",
  "ruff==0.11.11",
  "sphinx==8.2.3",
  "types-requests==2.32.0.20250515",
]
