# SPDX-FileCopyrightText: Copyright (c) 2019-2026 Aibolit
# SPDX-License-Identifier: MIT

[project]
name = "aibolit"
description = "DevTool recommending how to improve the maintenance quality of your Java classes"
authors = [
  { name = "aibolit", email = "yegor256@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
  "beautifulsoup4==4.14.3",
  "build==1.4.0",
  "catboost==1.2.10",
  "chardet==6.0.0.post1",         # Replace cchardet with chardet for Python 3.12 compatibility
  "deprecated==1.3.1",
  "html5lib==1.1",
  "javalang==0.13.0",
  "lxml==6.0.2",
  "matplotlib==3.10.8",
  "networkx==3.6.1",          # Updated to be compatible with NumPy 2.0+
  "numpy==2.4.2",
  "packaging==26.0",        # For version parsing, updated for sphinx compatibility
  "pandas==3.0.1",
  "pebble==5.2.0",
  "requests==2.32.5",
  "scikit-learn==1.8.0",
  "scipy==1.17.1",
  "setuptools==82.0.0",
  "tqdm==4.67.3",
]

classifiers = [
  "Programming Language :: Python",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development",
  "Topic :: Utilities"
]

[project.scripts]
aibolit = "aibolit.__main__:main"

[tool.setuptools]
packages = ["aibolit"]
include-package-data = true

[tool.setuptools.package-data]
aibolit = [
  "binary_files/halstead.jar",
  "binary_files/model.dat"
]

[tool.setuptools.dynamic]
version = { attr = "aibolit.__version__" }

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.mypy]
mypy_path = "stubs"

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
extend-select = [
  "D207",
  "D208",
  "Q",
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"
multiline-quotes = "single"

[dependency-groups]
dev = [
  "codecov==2.1.13",
  "flake8-elegant-objects==1.1.1",
  "flake8==7.3.0",
  "mypy==1.19.1",                    # Update to a version compatible with Python 3.12
  "pylint==4.0.5",
  "pytest-cov==7.0.0",
  "pytest-testmon==2.2.0",
  "pytest==9.0.2",
  "ruff==0.15.2",
  "sphinx==9.1.0",
  "types-requests==2.32.4.20260107",
]
